chore(demo): add button_size example

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
         $scope.click = function () {
             const options = {
                 title: 'Hardy Har Har',
-                size: 'lg'
+                size: 'lg',
+                button_size: 'btn-lg'
             };
             $dialogConfirm('Please confirm me', options);
         };
